juno/qa/apps/datagrid-service/services.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: datagrid-service
  name: datagrid-service
spec:
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: datagrid-service
