juno/qa/apps/datagrid-service/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: datagrid-service
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - datagrid-api.qa.juno.cqdg.ferlab.bio
      secretName: cqdg-ingress-certificate
  rules:
    - host: datagrid-api.qa.juno.cqdg.ferlab.bio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: datagrid-service
                port:
                  number: 5000
